# CANPiAuto

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Client.h  DartConfiguration.tcl  Makefile  autohotspot.bash  canHandler.h  canpi  canpi.service  dhcpd.conf  dnsmasq.conf.in  edSession.h  hostapd.conf.in  iface.ap  initial-setup.sh  interfaces  interfaces.ap  interfaces.wifi  main.cpp  nodeConfigurator.h  sessionHandler.h  start_canpi.sh  tcpClientGridConnect.cpp  tcpClientGridConnect.h  toolchain-rpi3.cmake  update_canpi_cfg.awk  update_canpi_cfg.gawk  update_multiple_service.awk  wlan0_dhpc.conf  wpa_supplicant.conf.in
canpi/: CMakeLists.txt  canpi.epm
canpi/config/: canpi.service  canpiconfig.service
canpi/package/: Makefile
cmake/: Packing.cmake  armv6-rpi-linux-gnueabihf.cmake
config/: canpi.service  iface.can0.conf  iface.wifi  wlan0_ap.conf
scripts/: canpi-initial-setup.sh  initial-setup.sh  update_canpi_cfg.awk  update_hostapd_conf.awk  update_multiple_service.awk  update_wpa_supplicant_conf.awk
src/: canHandler.cpp  canHandler.h  hello_test.cpp  main.cpp  mock_canHandler.h  mock_canHandler_unittest.cpp  mock_sessionHandler.h  mock_tcpServer.h  mock_tcpServer_unittest.cpp  nodeConfigurator.h  sessionHandler.h  tcpClient.cpp  tcpClientGridConnect_unittest.cpp  tcpServer.h
src/inc/: msgdata.h
src/main/: Client.h  Turnout.h  canHandler.h  edSession.h  frameCAN.h  gpio.cpp  gpio.h  main.cpp  nodeConfigurator.h  sessionHandler.h  tcpClient.h  tcpClientGridConnect.h  tcpServer.h
tests/: CANostream.cpp  CANostream.h  CANsprintf.cpp  CANsprintf.h
webserver/: canpiconfig.py
webserver/example/static/: main.css
